Fixed button sizing and spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   min-width: 50vw;
 }
 
-.img{
+.img {
   height: 150px;
   width: 150px;
   background-image: url("Yash.jpg");
@@ -86,6 +86,7 @@ p {
 
 .down-btn {
   min-width: 150px;
+  margin-left: 15px;
 }
 
 .btns button {
@@ -97,15 +98,24 @@ p {
 }
 
 .download {
-  min-width: 150px;
+  min-width: 175px;
   background-color: rgb(0, 183, 255);
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.download i {
+  margin-left: 5px;
 }
 
 .msg {
   width: 150px;
   display: flex;
   justify-content: space-evenly;
+  margin-left: 10px;
+  gap: 10px;
 }
 
 .msg button {
@@ -119,9 +129,9 @@ i {
 .project-skill-switch {
   margin: 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   background: #f4f4f4;
-  width: 320px;
+  width: 360px;
   line-height: 40px;
   border-radius: 7px;
 }
@@ -137,7 +147,8 @@ i {
 
 .Projects,
 .Skills {
-  margin: 5px;
+  margin: 6px;
+  padding: 2px 10px;
 }
 
 .active {
